# Baguette

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
benchmarks/: CMakeLists.txt  bench_cp.cpp  bench_flow.cpp  bench_lp_methods.cpp  bench_milp.cpp  bench_milp_large.cpp  bench_network_simplex.cpp  bench_presolve.cpp  bench_presolve_levels.cpp  bench_proof.cpp  bench_tsp_formulations.cpp
documentation/: README.md  core.md  cp.md  lp.md  milp.md  model.md  proof_system.md
include/baguette/core/: Config.hpp  Domain.hpp  LinearExpr.hpp  Sense.hpp  Variable.hpp  Version.hpp.in
include/baguette/cp/: CPConstraint.hpp  CPConstraints.hpp  CPTypes.hpp
include/baguette/cp/constraints/: AllDiff.hpp  Cumulative.hpp
include/baguette/lp/: LPResult.hpp  LPSolver.hpp  Presolve.hpp
include/baguette/milp/: BranchAndBound.hpp  CuttingPlanes.hpp  MILPResult.hpp  Presolve.hpp  SecCuts.hpp
include/baguette/model/: Model.hpp  ModelData.hpp  ModelEnums.hpp  Presolve.hpp
src/core/: LinearExpr.cpp
src/cp/: CPConstraints.cpp
src/cp/constraints/: allDiff.cpp  cumulative.cpp
src/lp/: LPSolver.cpp  Presolve.cpp  StandardForm.cpp  StandardForm.hpp  Tableau.cpp  Tableau.hpp
src/lp/algorithms/: DualSimplex.cpp  DualSimplex.hpp  DualSimplexBV.cpp  DualSimplexBV.hpp  Extractor.cpp  Extractor.hpp  IPMSolver.cpp  IPMSolver.hpp  LUTableau.cpp  LUTableau.hpp  MehrotraIPM.cpp  MehrotraIPM.hpp  NetworkSimplex.cpp  NetworkSimplex.hpp  PrimalSimplex.cpp  PrimalSimplex.hpp  PrimalSimplexBV.cpp  PrimalSimplexBV.hpp  RevisedSimplex.cpp  RevisedSimplex.hpp  RevisedSimplexBV.cpp  RevisedSimplexBV.hpp  SimplexConfig.hpp  SimplexTableau.cpp  SimplexTableau.hpp  SimplexTableauBV.cpp  SimplexTableauBV.hpp  StandardForm.cpp  StandardForm.hpp
src/milp/: BranchAndBound.cpp  CuttingPlanes.cpp  Presolve.cpp  ProofWriter.cpp  ProofWriter.hpp  SecCuts.cpp
src/milp/cuts/: gmi.cpp  gmi.hpp  mir.cpp  mir.hpp
src/model/: Model.cpp  Presolve.cpp
tests/: graph_problems.hpp  test_core.cpp  test_model.cpp
tests/core/: test_core.cpp
tests/cp/: test_cp.cpp  test_sudoku.cpp
tests/cp/constraints/: test_allDiff.cpp  test_cumulative.cpp
tests/lp/: MILP_problems.hpp  lp_problems.hpp  test_dual_sf.cpp  test_dual_simplex.cpp  test_farkas.cpp  test_ipm.cpp  test_lp.cpp  test_lp_methods.cpp  test_lp_stats.cpp  test_mehrotra_ipm.cpp  test_network_simplex.cpp  test_presolve.cpp  test_revised_simplex.cpp  test_sensitivity.cpp  test_standard_form.cpp  test_tableau_init.cpp  test_warm_start.cpp
tests/milp/: test_bb.cpp  test_bnc.cpp  test_gmi.cpp  test_milp_classic.cpp  test_mir.cpp  test_presolve_milp.cpp  test_proof.cpp  test_sec.cpp  test_stats.cpp
tests/model/: test_lp_constraint.cpp  test_model.cpp  test_presolve_elim.cpp
